# PRG2_Recueil_Exercices

./: CMakeLists.txt
C10_Erreurs_et_tests/: 10-01.c  CMakeLists.txt
C11_Structures_de_donnees/11-01-Queue/: 11-01.c  queue.c  queue.h
C11_Structures_de_donnees/11-02-Queue/: 11-02.c  queue.c  queue.h
C12_Aspects_avancés_C/12-01/: 12-01.c
C12_Aspects_avancés_C/12-02/: 12-02.c
C12_Aspects_avancés_C/12-03/: 12-03.c
C7_Types_avancés/: CMakeLists.txt
C7_Types_avancés/07-01-01-Struct/: 07-01-01-main.c
C7_Types_avancés/07-02-01-Enum/: 07-02-01-main.c
C7_Types_avancés/07-03-01-Union/: 07-03-01-main.c
C7_Types_avancés/07-04-01-Alignement/: 07-04-01-main.c
C7_Types_avancés/07-05-01-Const/: 07-05-01-main.c
C8_Préprocesseur_et_compilation/: CMakeLists.txt
C8_Préprocesseur_et_compilation/08-01-01-Directives/: 08-01-01-main.c
C8_Préprocesseur_et_compilation/08-02-01-Macros/: 08-02-01-main.c
C8_Préprocesseur_et_compilation/08-02-02-Macros_avancées/: 08-02-02-Macros_avancées.md  08-02-02-main.c
C9_Fichiers/: CMakeLists.txt
C9_Fichiers/09-02-Fichiers-texte/: 09-02-input.txt  09-02.c
C9_Fichiers/09-03-Fichiers-binaires/: 09-03-Fichiers-binaires.md  09-03.c
C9_Fichiers/09-04-Fichiers-et-buffers/: 09-04-01-Fichiers-et-buffers.md  09-04-01.c  09-04-02.c
