cmake_minimum_required(VERSION 3.27)
project(PRG2_Recueil_Exercices C)

set(CMAKE_C_STANDARD 11)

add_executable(07-01-01-main 07-01-01-Struct/07-01-01-main.c)
add_executable(07-02-01-main 07-02-01-Enum/07-02-01-main.c)
add_executable(07-03-01-Union 07-03-01-Union/07-03-01-main.c)
add_executable(07-04-01-Alignement 07-04-01-Alignement/07-04-01-main.c)
add_executable(07-05-01-Const 07-05-01-Const/07-05-01-main.c)
