cmake_minimum_required(VERSION 3.27)
project(PRG2_Recueil_Exercices C)

set(CMAKE_C_STANDARD 11)

add_executable(08-01-01-Directives 08-01-01-Directives/08-01-01-main.c)
add_executable(08-02-01-Macros 08-02-01-Macros/08-02-01-main.c)
add_executable(08-02-02-Macros_avancees 08-02-02-Macros_avancées/08-02-02-main.c)
