cmake_minimum_required(VERSION 3.27)
project(PRG2_Recueil_Exercices C)

set(CMAKE_C_STANDARD 11)

add_executable(09-02 09-02-Fichiers-texte/09-02.c)
add_executable(09-03 09-03-Fichiers-binaires/09-03.c)
add_executable(09-04-01 09-04-Fichiers-et-buffers/09-04-01.c)
add_executable(09-04-02 09-04-Fichiers-et-buffers/09-04-02.c)

